--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.1.3/zephyr/bootstrap.min.css" integrity="sha512-gmJFuKTEQw6aHC2cWdrmdEHYw/M/8+bfsKmsJCcQ5hoI7WoOtkQ9hs7P0fqpBGRHHqBBJMibeCfhmk8So5qYUw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.jsdelivr.net/npm/mfkdf@1.2.1/mfkdf.min.js" integrity="sha256-m536uDtfCiMW690x3RN6qmlIdLOPtXAmXmoW7p8UJTA=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/buffer.js"></script>
+    <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/index.js"></script>
     <title>Demo Application | Multi-Factor Key Derivation Function (MFKDF)</title>
     <meta name="description" content="This application illustrates how to use MFKDF to build a strong centralized password management application featuring multi-factor key derivation with advanced key derivation policies, factor persistence, self-service key recovery, MFKDF-based authentication, and end-to-end encryption." />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
